--- a/views/enroll_page_payment.ejs
+++ b/views/enroll_page_payment.ejs
@@ -272,7 +272,7 @@
               <button id="modal" class="btn btn-dark" onclick="Instructor_info_detail()">
                 상세보기
               </button>
-              <dialog id="dialog" style="height: 550px; width: 20%;">
+              <dialog id="dialog">
                 <div align="center">
                 <img src='http://localhost:54213/<%=Image%>' width="180" height="250">
               </div>
