--- a/views/my_page_instructor_update_create.ejs
+++ b/views/my_page_instructor_update_create.ejs
@@ -157,6 +157,11 @@
         <input type="checkbox" id="Course_type" name="Course_type" value="5"><label for="Scatch">Scatch</label>
         <input type="checkbox" id="Course_type" name="Course_type" value="6"><label for="Entry">Entry</label>
         <input type="checkbox" id="Course_type" name="Course_type" value="7"><label for="Make_Web">웹 페이지 만들기</label>
+        <input type="checkbox" id="Course_type" name="Course_type" value="8"><label for="Python_hard">Python hard</label>
+        <input type="checkbox" id="Course_type" name="Course_type" value="9"><label for="COS">COS</label>
+        <input type="checkbox" id="Course_type" name="Course_type" value="10"><label for="COS pro">COS pro</label>
+
+
         <br>
         <input type="checkbox" name="Course_day" id="Course_day" value="1" checked><label for="Monday">월요일</label>
         <input type="checkbox" name="Course_day" id="Course_day" value="2"><label for="Tuesday">화요일</label>
